--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,8 +1,8 @@
 .cover__background {
     background-image: url(../../../images/cover-trains.jpg);
-    background-size: 1184px 740px;
+    background-size: cover;
     width: 1184px;
-    min-height: 740px;
+    height: 740px;
     margin: 92 auto;
     position: relative;
     background-repeat: no-repeat;
@@ -14,6 +14,7 @@
     .cover__background {
       background-size: 1024px 640px;
       width: 100%;
+      max-height: 640px;
     }
   }
 
@@ -22,6 +23,7 @@
     .cover__background {
       background-size: 768px 480px;
       width: 100%;
+      max-height: 480px;
     } 
   }
 
@@ -30,5 +32,6 @@
     .cover__background {
     background-size: 320px 200px;
     width: 100%;
+    max-height: 200px;
   }
 }
