--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -6,5 +6,25 @@
     position: absolute;
     left: 0;
     top: 0;
-    overflow: hidden;
 }
+
+@media screen and (max-width: 1024px) {
+ 
+    .cover__overlay {
+      max-height: 640px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+
+    .cover__overlay {
+         max-height: 480px;
+    }
+}
+
+  @media screen and (max-width: 320px) {
+
+    .cover__overlay {
+        max-height: 200px;
+      }
+  }
