--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,22 +1,23 @@
 @font-face {
     font-family: 'Inter';
-    src: url("./Inter-Black.ttf") format("woff2");
-    src: url("./Inter-Regular.woff") format("woff");
-    src: url("./Inter-Regular.ttf") format("ttf");
+    src: url(Inter-Black.ttf) format("woff2");
+    src: url(Inter-Regular.woff) format("woff");
+    src: url(Inter-Regular.ttf) format("truetype");
     font-weight: normal;
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url("./Inter-Bold.woff2") format("woff2");
-    src: url("./Inter-Bold.woff") format("woff");
-    src: url("./Inter-Bold.ttf") format("ttf");
-    font-weight: bold;
+    src: url(Inter-Bold.woff2) format("woff2");
+    src: url(Inter-Bold.woff) format("woff");
+    src: url(Inter-Bold.ttf) format("truetype");
+    font-weight: 700;
 }
     
 @font-face {
     font-family: 'Inter';
-    src: url("./Inter-Black.woff2") format("woff2");
-    src: url("./Inter-Black.woff") format("woff");
-    src: url("./Inter-Black.ttf") format("ttf");
+    src: url(Inter-Black.woff2) format("woff2");
+    src: url(Inter-Black.woff) format("woff");
+    src: url(Inter-Black.ttf) format("truetype");
+    font-weight: 900;
 }
