--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -2,19 +2,40 @@
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
     width: 1184px;
-    height: 740px;
+    min-height: 740px;
     margin: 92 auto;
     position: relative;
     background-repeat: no-repeat;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
   }
 
-  @media screen and (max-width: 1024px) {
+  .cover__background:before {
+    content: '';
+    background: #2a2c2f;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .cover__background:hover:before {
+    background: #2A2C2F;
+    opacity: 0.8;
+    transition: 0.5s;
+  }
+  
+    @media screen and (max-width: 1024px) {
  
     .cover__background {
       background-size: 1024px 640px;
       width: 100%;
-      max-height: 640px;
+      min-height: 640px;
     }
   }
 
@@ -22,16 +43,16 @@
 
     .cover__background {
       background-size: 768px 480px;
-      width: 100%;
-      max-height: 480px;
+      min-height: 480px;
     } 
   }
 
   @media screen and (max-width: 320px) {
 
     .cover__background {
-    background-size: 320px 200px;
-    width: 100%;
-    max-height: 200px;
+      background-size: 320px 200px;
+      min-height: 200px;
+    }
   }
-}
+
+ 
