--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,8 +6,9 @@
     text-align: center;
     position: relative;
     z-index: 1;
-    margin: 0 auto;
-    max-width: 560px;
+    max-width: 360px;
+    color: #ffffff;
+    margin: 0;
   }
 
   @media screen and (max-width: 320px) {
