--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,39 +3,27 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    text-align: center;
-    padding-top: 245px;
-    padding-bottom: 32px;
     position: relative;
-    z-index: 1;
+    z-index: 99;
     max-width: 560px;
-    margin: auto;
+    text-align: center;
+    color: #ffffff;
+    margin: 0;
   }
 
-  @media screen and (max-width: 1024px) {
- 
-    .cover__title {
-      padding-top: 195px;
-    } 
-}
-
-@media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
 
     .cover__title {
       font-size: 72px;
       line-height: 76px;
-      padding-top: 115px;
-      
     }
-}
+  }
 
-@media screen and (max-width: 320px) {
+  @media screen and (max-width: 320px) {
 
     .cover__title {
       font-size: 32px;
       line-height: 35px;
-      padding-top: 33px;
-      padding-bottom: 16px;
       max-width: 288px;
     } 
-}
+  }
