--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,11 @@
 .footer {
     max-width: 1184px;
-    min-height: 18px;
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     padding-top: 92px;
     padding-bottom: 24px;
+    margin: 0 auto;
   }
 
   @media screen and (max-width: 1024px) {
@@ -29,11 +30,13 @@
    @media screen and (max-width: 320px) {
 
   .footer {
-    max-width: 186px;
-    min-height: 310px;
+    max-width: 288px;
     padding-top: 64px;
     padding-bottom: 24px;
-    padding-left: 16px;
+    padding-left: 0;
+    padding-right: 0;
     flex-direction: column;
+    align-items: flex-start;
+    margin-left: 16px;
   }
 }
