--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,21 @@
 .lead__caption {
-    width: 158px;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 0.15em;
     text-transform: uppercase;
+  }
+
+
+  @media screen and (max-width: 768px) {
+    .lead__caption {
+      margin-left: 24px; 
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .lead__caption {
+      margin-left: 18px; 
+    }
   }
