--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
     max-width: 984px;
-    max-width: 100%;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, minmax(200px, 1fr));
     column-gap: 40px;
