--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url(Inter-Black.ttf) format("woff2");
+    src: url(Inter-Regular.ttf) format("woff2");
     src: url(Inter-Regular.woff) format("woff");
     src: url(Inter-Regular.ttf) format("truetype");
     font-weight: normal;
