--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,21 +9,15 @@
     text-align: center;
     color: #ffffff;
     margin: 0;
+    padding-bottom: 32px;
   }
 
-  @media screen and (max-width: 768px) {
-
-    .cover__title {
-      font-size: 72px;
-      line-height: 76px;
-    }
-  }
-
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 500px) {
 
     .cover__title {
       font-size: 32px;
       line-height: 35px;
       max-width: 288px;
+      padding-bottom: 16px;
     } 
   }
