--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    width: 1184px;
+    max-width: 1184px;
     padding-top: 92px;
     margin: 0 auto;
 }
@@ -7,20 +7,21 @@
 @media screen and (max-width: 1024px) {
 
     .cover {
-      width: 1024px;
+      max-width: 1024px;
     }
 }
 
 @media screen and (max-width: 768px) {
 
     .cover {
-      width: 768px;
+      max-width: 768px;
     }
 }
 
 @media screen and (max-width: 320px) {
+    
     .cover {
-        width: 320px;
+        max-width: 320px;
         padding-top: 66px;
     }
 }
