--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,10 +8,11 @@
     text-align: right;
   }
 
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 700px) {
 
     .footer__copyright {
       flex-direction: row;
       align-self: flex-start;
+      margin-top: 16px;
     }
   }
