--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,7 +5,11 @@
     padding: 0;
   }
 
-  @media screen and (max-width: 320px) {
+  .footer__links:last-of-type {
+    padding: 0;
+  }
+
+  @media screen and (max-width: 700px) {
 
     .footer__links {
       flex-direction: column;
