--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  width: 1184px;
+  max-width: 1184px;
   min-height: 52px;
   padding-top: 28px;
   padding-bottom: 56px;
@@ -11,7 +11,7 @@
 @media screen and (max-width: 1024px) {
 
   .header {
-    width: 928px;
+    max-width: 928px;
     padding-bottom: 48px;
   }
 }
@@ -19,7 +19,7 @@
 @media screen and (max-width: 768px) {
 
   .header {
-    width: 720px;
+    max-width: 720px;
     padding-bottom: 68px;
   }
 }
@@ -27,7 +27,7 @@
 @media screen and (max-width: 320px) {
 
   .header {
-    width: 288px;
+    max-width: 288px;
     min-height: 42px;
     padding-top: 16px;
     padding-bottom: 48px;
