--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,6 @@
 .intro__list {
     list-style: none;
-    width: 690px;
+    max-width: 690px;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
