--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,7 +6,7 @@
     font-size: 24px;
     line-height: 28px;
     text-decoration: none;
-    margin-right: 18px;
+    margin-left: 18px;
   }
   
   .header__lang-link:hover {
