--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,8 +4,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
-    margin-left: 48px;
-    margin-right: 48px;
+    margin: 0 auto;
   }
 
 @media screen and (max-width: 1024px) {
@@ -24,8 +23,7 @@
     max-width: 720px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    margin-left: 24px;
-    margin-right: 24px;
+    gap: 16px;
   }
 }
 
@@ -36,7 +34,5 @@
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(10, 1fr);
     gap: 12px;
-    margin-left: 16px;
-    margin-right: 16px;
   }
 }
