--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -33,6 +33,10 @@
 
     .place {
       grid-template-columns: 100%;
+      row-gap: 32px;
       max-width: 320px;
+      margin-bottom: 49px;
+      margin-left: auto;
+      margin-right: auto;
     }
 }
